--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
-          <li class="menu-has-children"><a href="">Drop Down</a>
+          <li><a href="#about">A empresa</a></li>
+          <li><a href="#services">Serviços</a></li>
+          <!-- <li><a href="#portfolio">Portfolio</a></li> -->
+          <!-- <li><a href="#team">Team</a></li> -->
+          <!-- <li class="menu-has-children"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="menu-has-children"><a href="#">Drop Down 2</a>
@@ -69,8 +69,8 @@
               <li><a href="#">Drop Down 4</a></li>
               <li><a href="#">Drop Down 5</a></li>
             </ul>
-          </li>
-          <li><a href="#contact">Contact Us</a></li>
+          </li> -->
+          <li><a href="#contact">Contato</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -81,9 +81,10 @@
   ============================-->
   <section id="hero">
     <div class="hero-container">
-      <h1>Welcome to Regna</h1>
-      <h2>We are team of talanted designers making websites with Bootstrap</h2>
-      <a href="#about" class="btn-get-started">Get Started</a>
+      <h1>GERENCIAMENTO DE PROJETOS
+        E EXECUÇÕES CIVIS</h1>
+      <!-- <h2>We are team of talanted designers making websites with Bootstrap</h2> -->
+      <a href="#about" class="btn-get-started">Vamos começar</a>
     </div>
   </section><!-- #hero -->
 
@@ -97,27 +98,34 @@
         <div class="row about-container">
 
           <div class="col-lg-6 content order-lg-1 order-2">
-            <h2 class="title">Few Words About Us</h2>
+            <h2 class="title">Quem somos</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Iniciamos as atividades em 2013, realizando
+              trabalhos de construção civil. Posteriormente,
+              vislumbrando o futuro do mercado de
+              gerenciamento e projetos.
+              Procuramos apresentar sempre novas
+              soluções de baixo custo, em busca de
+              melhores colocações e destaque diante
+              desse emergente cenário da construção civil.
             </p>
 
             <div class="icon-box wow fadeInUp">
-              <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <div class="icon"><i class="fa fa-chevron-circle-right"></i></div>
+              <h4 class="title"><a href="">Reformas</a></h4>
+              <!-- <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p> -->
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
-              <div class="icon"><i class="fa fa-photo"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <div class="icon"><i class="fa fa-chevron-circle-right"></i></div>
+              <h4 class="title"><a href="">Construção Civil</a></h4>
+              <!-- <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p> -->
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-              <div class="icon"><i class="fa fa-bar-chart"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <div class="icon"><i class="fa fa-chevron-circle-right"></i></div>
+              <h4 class="title"><a href="">Instalações</a></h4>
+              <!-- <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p> -->
             </div>
 
           </div>
@@ -131,7 +139,7 @@
     <!--==========================
       Facts Section
     ============================-->
-    <section id="facts">
+    <!-- <section id="facts">
       <div class="container wow fadeIn">
         <div class="section-header">
           <h3 class="section-title">Facts</h3>
@@ -162,7 +170,9 @@
   			</div>
 
       </div>
-    </section><!-- #facts -->
+    </section> -->
+    
+    <!-- #facts -->
 
     <!--==========================
       Services Section
@@ -170,53 +180,56 @@
     <section id="services">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title">Services</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <h3 class="section-title">Serviços</h3>
+          <p class="section-description">Residencial e industrial</p>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-desktop"></i></a></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <div class="icon"><a href=""><i class="fa fa-cog"></i></a></div>
+              <h4 class="title"><a href="">Saneamento</a></h4>
+              <p class="description">Filtros anaeróbicos e elevatórias.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-bar-chart"></i></a></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <div class="icon"><a href=""><i class="fa fa-cog"></i></a></div>
+              <h4 class="title"><a href="">Barracões</a></h4>
+              <p class="description">Depósitos, armazéns, fabricas.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-paper-plane"></i></a></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <div class="icon"><a href=""><i class="fa fa-cog"></i></a></div>
+              <h4 class="title"><a href="">Prestações de serviços</a></h4>
+              <p class="description">Empreitadas, reformas de casa, galpões e fabricas.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-photo"></i></a></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <div class="icon"><a href=""><i class="fa fa-cog"></i></a></div>
+              <h4 class="title"><a href="">Instalações rurais</a></h4>
+              <p class="description">Filtros anaeróbicos e elevatórias.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-road"></i></a></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <div class="icon"><a href=""><i class="fa fa-cog"></i></a></div>
+              <h4 class="title"><a href="">Tubulações</a></h4>
+              <p class="description">Aço carbono, inox, linhas de processo em geral, água de serviço, vapor, condensado, óleo diesel, e tanques de pequeno porte.
+                Ar comprimido, água gelada, incêndio, gás.</p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+          <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
             <div class="box">
               <div class="icon"><a href=""><i class="fa fa-shopping-bag"></i></a></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href="">Gerenciamento de projetos e execuções civis</a></h4>
+              <p class="description">
+                Através de uma análise e levantamento do diagnóstico atual da construção civil, com propostas e busca de soluções inovadoras para sua construção. Visando redução de custos,
+                eliminação de desperdício.</p>
             </div>
-          </div>
+          </div> -->
         </div>
 
       </div>
@@ -229,11 +242,13 @@
       <div class="container wow fadeIn">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
-            <h3 class="cta-title">Call To Action</h3>
-            <p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3 class="cta-title">Gerenciamento de projetos e execuções civis</h3>
+            <p class="cta-text"> 
+              Através de uma análise e levantamento do diagnóstico atual da construção civil, com propostas e busca de soluções inovadoras para sua construção. Visando redução de custos,
+              eliminação de desperdício.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
+            <a class="cta-btn align-middle" href="http://bit.ly/whatsappDef" target="_blank">WhatsApp </a>
           </div>
         </div>
 
@@ -243,7 +258,7 @@
     <!--==========================
       Portfolio Section
     ============================-->
-    <section id="portfolio">
+    <!-- <section id="portfolio">
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Portfolio</h3>
@@ -386,12 +401,14 @@
         </div>
 
       </div>
-    </section><!-- #portfolio -->
+    </section>
+     -->
+    <!-- #portfolio -->
 
     <!--==========================
       Team Section
     ============================-->
-    <section id="team">
+    <!-- <section id="team">
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Team</h3>
@@ -456,7 +473,9 @@
         </div>
 
       </div>
-    </section><!-- #team -->
+    </section>
+     -->
+    <!-- #team -->
 
     <!--==========================
       Contact Section
