Created form validation messages. Need backend.

--- a/index.html
+++ b/index.html
@@ -530,22 +530,22 @@
               <div id="errormessage"></div>
               <form action="" method="post" role="form" class="contactForm">
                 <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor, insira ao menos 4 caracteres." />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Seu Email" data-rule="email" data-msg="Please enter a valid email" />
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Seu Email" data-rule="email" data-msg="Por favor, insira um Email válido." />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Por favor, insira ao menos 8 caracteres para o assunto." />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Sua mensagem" placeholder="Mensagem"></textarea>
+                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Por favor, envie uma mensagem para nós." placeholder="Mensagem"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center"><button type="submit">Enviar mensgem</button></div>
+                <div class="text-center"><button type="submit">Enviar mensagem</button></div>
               </form>
             </div>
           </div>
