--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Regna Bootstrap Template</title>
+  <title>DEF Construtora</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -484,7 +484,7 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Contato</h3>
-          <p class="section-description">Contate-nos. Envie-nos uma mensagem e vamos tirar do papel o seu projeto.</p>
+          <p class="section-description">Contate-nos. Envie uma mensagem e vamos executar o seu projeto.</p>
         </div>
       </div>
 
