Sending email ok

--- a/index.html
+++ b/index.html
@@ -484,7 +484,9 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Contato</h3>
-          <p class="section-description">Contate-nos. Envie uma mensagem e vamos executar o seu projeto.</p>
+          <p class="section-description">Estamos à disposição para maiores informações. <br>
+            <strong>Área de atuação: </strong> Paraná / Santa Catarina / São Paulo
+          </p>
         </div>
       </div>
 
@@ -545,6 +547,7 @@
                   <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Por favor, envie uma mensagem para nós." placeholder="Mensagem"></textarea>
                   <div class="validation"></div>
                 </div>
+                
                 <div class="text-center"><button type="submit">Enviar mensagem</button></div>
               </form>
             </div>
